color for vectors

--- a/nlp_exploration.ipynb
+++ b/nlp_exploration.ipynb
@@ -126,18 +126,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nltk_line_plot(df):\r\n",
-    "    # temp = pd.DataFrame()\r\n",
-    "    # temp['Coin'] = df['Query']\r\n",
-    "    # temp['NLTK_raw'] = df['NLTK_sentiment']\r\n",
-    "    # start = \r\n",
-    "    # temp['Negative'] = temp['NLTK_raw'].apply(lambda x:x['neg'])\r\n",
-    "    # temp['Neutral'] = temp['NLTK_raw'].apply(lambda x:x['neu'])\r\n",
-    "    # temp['Positive'] = temp['NLTK_raw'].apply(lambda x:x['pos'])\r\n",
-    "    fig = go.Figure()\r\n",
-    "    for i in range(df.shape[0]):\r\n",
-    "        temp = df.iloc[i]\r\n",
-    "        fig.add_trace(go.Scatter3d(x=[0, temp['NLTK_sentiment']['neg']], y=[0, temp['NLTK_sentiment']['neu']], z=[0, temp['NLTK_sentiment']['pos']], color=temp['Query']))\r\n",
+    "color_dict = {'XRP':'blue', 'BTC':'red', 'ETH':'green', 'DOGE':'black'}\n",
+    "\n",
+    "def nltk_line_plot(df):\n",
+    "    # temp = pd.DataFrame()\n",
+    "    # temp['Coin'] = df['Query']\n",
+    "    # temp['NLTK_raw'] = df['NLTK_sentiment']\n",
+    "    # start = \n",
+    "    # temp['Negative'] = temp['NLTK_raw'].apply(lambda x:x['neg'])\n",
+    "    # temp['Neutral'] = temp['NLTK_raw'].apply(lambda x:x['neu'])\n",
+    "    # temp['Positive'] = temp['NLTK_raw'].apply(lambda x:x['pos'])\n",
+    "    fig = go.Figure()\n",
+    "    for i in range(df.shape[0]):\n",
+    "        temp = df.iloc[i]\n",
+    "        fig.add_trace(go.Scatter3d(x=[0, temp['NLTK_sentiment']['neg']], y=[0, temp['NLTK_sentiment']['neu']], z=[0, temp['NLTK_sentiment']['pos']], color_discrete_sequence=[color_dict[temp['Query']]]))\n",
     "    fig.show()"
    ]
   },
